--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,31 @@
  *= require_self
  *= require_tree .
  */
+
+.data-table {
+    margin: 20px 0 20px 0;
+    font-size: 10px;
+    width: 100%;
+    border: 0;
+}
+
+
+.data-table .w140 {
+   /*width: 140px;*/
+}
+
+.data-table .header td {
+    color: blue;
+    font-weight: 100px;
+    text-align: center;
+    font-size: 12px;
+    padding: 5px;
+    border: 0;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    cursor: pointer
+}
+
+.data-table tr:nth-child(even) {
+    background: #979797;
+}
